fix(tests): Migrate all tests to Junit5 + mockito. Remove hamcrest and commons-io usage for tests.